# cs339-lab2

./: .gitignore  .replit  Cargo.toml  LICENSE  create-handin.sh  replit.md
assign/: operators.md  storage.md
assign/figures/src/: buffer-pool.graffle  header-layout.graffle  page-layout-example.graffle  page-layout.graffle  tuple-layout-example.graffle  tuple-layout.graffle
crates/catalog/: Cargo.toml
crates/catalog/src/: catalog.rs  column.rs  field.rs  lib.rs  schema.rs  serde.rs  tuple.rs  types.rs
crates/error/: Cargo.toml
crates/error/src/: error.rs  lib.rs  macros.rs
crates/storage/: Cargo.toml
crates/storage/src/: buffer_pool.rs  frame.rs  frame_handle.rs  lib.rs  record_id.rs  storage.rs  typedef.rs
crates/storage/src/disk/: disk_manager.rs
crates/storage/src/heap/: mod.rs  table_heap.rs  table_tuple_iterator.rs
crates/storage/src/lock/: lock_manager.rs  mod.rs
crates/storage/src/page/: mod.rs  table_page.rs
crates/storage/src/replacer/: lru_k_replacer.rs  lru_replacer.rs  mod.rs  replacer.rs
