[package]
name = "rustdb-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
# documentation "https://doc.rs/rustdb-catalog"
description = "The catalog module for schema and field defs in the Rustdb pedagogical database management system."

[dependencies]
rand.workspace = true
rustdb-error = { path = "../error" }
bytes.workspace = true
serde.workspace = true

[lints]
workspace = true
