[package]
name = "rustdb-error"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
# documentation "https://doc.rs/rustdb-error"
description = "The Result module for recoverable errors in the Rustdb pedagogical database management system."

[dependencies]
serde.workspace = true

[lints]
workspace = true
